Add su-exec package

--- a/1.10/Dockerfile
+++ b/1.10/Dockerfile
@@ -28,6 +28,7 @@ RUN set -e && \
         luajit \
         make \
         pcre \
+        su-exec \
         wget \
 
         # Temporarily packages to compilation
