--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   global:
     - LATEST_TAG=1.13
   matrix:
-    - TAG=1.13
+    - TAG=1.13 NGINX_VER=1.13.8
     - TAG=1.12 NGINX_VER=1.12.2
 
 script:
