--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ after_success: |
     set -e
 
     if [[ "${TRAVIS_PULL_REQUEST}" == "false" && ("${TRAVIS_BRANCH}" == "master"  || -n "${TRAVIS_TAG}") ]]; then
-      docker login -u "test" -p "${DOCKER_PASSWORD}"
+      docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
 
       if [[ -n "${TRAVIS_TAG}" ]]; then
         export STABILITY_TAG="${TRAVIS_TAG}"
