Make travis-release executable

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
   - make && make test
 
 after_success:
-  - travis-release.sh
+  - ./travis-release.sh
 
 notifications:
   on_failure: never
