--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -58,5 +58,5 @@ services:
         62fhFpwtP7IE2/o+6+JybuQRrUqHvAPM0/RTn8//rZmkmq3mrAYc+MslXAt+
         -----END RSA PRIVATE KEY-----
     volumes:
-      - ./tests.sh:/usr/local/bin/tests.sh
+      - ./tests:/usr/local/bin/tests
       - ./nginx_modules:/home/wodby/nginx_modules
