--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ services:
   - docker
 
 env:
-  global:
-    - LATEST_TAG=1.14
   matrix:
-    - TAG=1.14 NGINX_VER=1.14.0 EXTRA_TAG=1
-    - TAG=1.13 NGINX_VER=1.13.12
+    - NGINX_VER=1.15.0 TAGS=1.15,1,latest
+    - NGINX_VER=1.14.0 TAGS=1.14
+    - NGINX_VER=1.13.12 TAGS=1.13
 
 script:
   - make && make test
