Use overridden log format over real ip, add tests for log formats customization #7

--- a/tests/drupal/7/docker-compose.yml
+++ b/tests/drupal/7/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       NGINX_BACKEND_HOST: drupal
       NGINX_VHOST_PRESET: drupal7
       NGINX_SERVER_EXTRA_CONF_FILEPATH: /var/www/html/server.conf
+      NGINX_LOG_FORMAT_SHOW_REAL_IP: 1
     depends_on:
       - drupal
     volumes:
