Adding more flexibility to the configuration of ModSec

--- a/tests/basic/docker-compose.yml
+++ b/tests/basic/docker-compose.yml
@@ -6,3 +6,5 @@ services:
     volumes:
       - ./tests.sh:/usr/local/bin/tests.sh
       - ./nginx_modules:/home/wodby/nginx_modules
+    environment:
+      NGINX_DISABLE_MODSECURITY: "0"
