modsecurity and owasp fixes #14

--- a/tests/drupal/7/docker-compose.yml
+++ b/tests/drupal/7/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - codebase:/var/www/html
       - ./server.conf:/var/www/html/server.conf
   drupal:
-    image: drupal:7-fpm
+    image: drupal:7-fpm-alpine
     volumes:
       - codebase:/var/www/html
 
