Make pagespeed a dynamic module, disabled by default

--- a/tests/basic/docker-compose.yml
+++ b/tests/basic/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       - ./tests.sh:/usr/local/bin/tests.sh
       - ./nginx_modules:/home/wodby/nginx_modules
     environment:
+      NGINX_PAGESPEED_ENABLED: "1"
       NGINX_MODSECURITY_ENABLE: "1"
       NGINX_MODSECURITY_USE_OWASP_CRS: "1"
