--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ env:
   - BASE_IMAGE_STABILITY_TAG=2.2.2
   - ALPINE_VER=3.8
   matrix:
-  - NGINX_VER=1.15.12 TAGS=1.15,1,latest
+  - NGINX_VER=1.16.0 TAGS=1.16,1,latest
+  - NGINX_VER=1.15.12 TAGS=1.15
   - NGINX_VER=1.14.2 TAGS=1.14
   - NGINX_VER=1.13.12 TAGS=1.13
 
