--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ env:
   - BASE_IMAGE_STABILITY_TAG=2.5.0
   - ALPINE_VER=3.8
   matrix:
-  - NGINX_VER=1.17.10 TAGS=1.17,1,latest
+  - NGINX_VER=1.19.0 TAGS=1.19,1,latest
+  - NGINX_VER=1.18.0 TAGS=1.18
+  - NGINX_VER=1.17.10 TAGS=1.17
   - NGINX_VER=1.16.1 TAGS=1.16
   - NGINX_VER=1.15.12 TAGS=1.15
   - NGINX_VER=1.14.2 TAGS=1.14
