--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,33 +17,27 @@ env:
 jobs:
   nginx-119:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        platform: ['linux/amd64','linux/arm64']
     steps:
     - uses: actions/checkout@v2
     - uses: docker/setup-qemu-action@v1
       with:
-        platforms: ${{ matrix.platform }}
+        platforms: linux/amd64,linux/arm64
     - uses: docker/setup-buildx-action@v1
     - uses: ./.github/actions
       with:
         version: 1.19.7
         tags: 1.19,1,latest
-        platform: ${{ matrix.platform }}
+        platform: linux/amd64,linux/arm64
   nginx-118:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        platform: ['linux/amd64','linux/arm64']
     steps:
     - uses: actions/checkout@v2
     - uses: docker/setup-qemu-action@v1
       with:
-        platforms: ${{ matrix.platform }}
+        platforms: linux/amd64,linux/arm64
     - uses: docker/setup-buildx-action@v1
     - uses: ./.github/actions
       with:
         version: 1.18.0
         tags: 1.18
-        platform: ${{ matrix.platform }}
+        platform: linux/amd64,linux/arm64
