--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: docker/setup-qemu-action@v1
       with:
-        platforms: linux/amd64,linux/arm64
+        platforms: amd64,arm64
     - uses: docker/setup-buildx-action@v1
     - uses: ./.github/actions
       with:
@@ -34,7 +34,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: docker/setup-qemu-action@v1
       with:
-        platforms: linux/amd64,linux/arm64
+        platforms: amd64,arm64
     - uses: docker/setup-buildx-action@v1
     - uses: ./.github/actions
       with:
