Build single-arch first, then test, then build multi-arch

--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -21,7 +21,7 @@ runs:
       PLATFORM: ${{ inputs.platform }}
     run: |
       set -e
-      make
+      make buildx-build-amd64
       make test
       make buildx-build
       . $GITHUB_ACTION_PATH/release.sh
