--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -21,7 +21,8 @@ runs:
       PLATFORM: ${{ inputs.platform }}
     run: |
       set -e
-      make buildx-build
+      make buildx-build-amd64
       make test
+      make buildx-build
       . $GITHUB_ACTION_PATH/release.sh
     shell: bash
