--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,55 +15,29 @@ env:
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
-  nginx-119-amd64:
+  nginx-119:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: docker/setup-qemu-action@v1
+      with:
+        platforms: amd64,arm64
     - uses: docker/setup-buildx-action@v1
     - uses: ./.github/actions
       with:
         version: 1.19.7
-        tags: 1.19-amd64
-        platform: linux/amd64
-#  nginx-118:
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v2
-#    - uses: docker/setup-qemu-action@v1
-#      with:
-#        platforms: amd64,arm64
-#    - uses: docker/setup-buildx-action@v1
-#    - uses: ./.github/actions
-#      with:
-#        version: 1.18.0
-#        tags: 1.18
-#        platform: linux/amd64,linux/arm64
-  nginx-119-arm64:
-    runs-on: self-hosted
+        tags: 1.19,1,latest
+        platform: linux/amd64,linux/arm64
+  nginx-118:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: docker/setup-qemu-action@v1
+      with:
+        platforms: amd64,arm64
     - uses: docker/setup-buildx-action@v1
     - uses: ./.github/actions
       with:
-        version: 1.19.7
-        tags: 1.19-arm64
-        platform: linux/arm64
-  nginx-119-multiarch:
-    runs-on: ubuntu-latest
-    needs:
-    - nginx-119-amd64
-    - nginx-119-arm64
-    steps:
-    - name: create multiarch manifest
-      env:
-        TAGS: 1.19,1,latest
-        AMD64TAG: 1.19-amd64
-        ARM64TAG: 1.19-arm64
-      run: |
-        IFS=',' read -ra tags <<< "${TAGS}"
-        if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
-          export STABILITY_TAG="${GITHUB_REF##*/}"
-        fi
-        for tag in "${tags[@]}"; do
-            make create-multiarch-manifest TAG="${tag}";
-        done
+        version: 1.18.0
+        tags: 1.18
+        platform: linux/amd64,linux/arm64
